--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ nav a {
   }
   
   nav a:hover {
-    color: #2b3540;
+    color: #fffaf2;
     transition: 0.6s;
   }
   
@@ -153,7 +153,7 @@ nav a {
     height: 3px;
     bottom: 0;
     left: 0;
-    background-color: #2b3540;
+    background-color: #fffaf2;
     transform: scaleX(0);
     transform-origin: top left;
     transition: transform 0.8s ease;
@@ -285,7 +285,6 @@ color: #bdc3c7;
       flex-direction: column;
       align-items: center;
       margin-top: 1rem;  
-      
   }
   h1{
     font-size: 4rem;
@@ -297,6 +296,9 @@ color: #bdc3c7;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+.presentacion{
+  margin-top: 7rem;
 }
 
 }
